--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@nuxtjs/axios": "^5.3.1",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.3",
     "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1"
   }
