--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   },
   "devDependencies": {
     "@nuxtjs/moment": "^1.6.1",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "autoprefixer": "^10.3.1",
     "node-sass": "^5.0.0",
-    "sass-loader": "^11.0.1"
+    "postcss": "^8.3.5",
+    "sass-loader": "^11.0.1",
+    "tailwindcss": "^2.2.4"
   }
 }
