--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/axios": "^5.3.1",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
+    "jspdf": "^2.3.1",
     "moment": "^2.29.1",
     "nuxt": "^2.15.3",
     "nuxt-fontawesome": "^0.4.0"
